MD Settings: make avatar icon account for scale factor

R=tommycli@chromium.org
BUG=716269

Review-Url: https://codereview.chromium.org/2857753003
Cr-Commit-Position: refs/heads/master@{#468831}

Former-commit-id: 5e3e6c3816510119e1c71f53f2f9b01459cfd0ca